--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ html, body {
     flex-direction: column; /* Stack items vertically */
     padding-left: 1%; /* Add some padding to the left */
     padding-right: 1%; /* Add some padding to the right */
-    width: 25vw; /* Make the width as wide as the content */
+    flex: 0 0 25%; /* Make the navigation take up 25% of the width */
 }
 
 .navigation .item {
@@ -93,7 +93,8 @@ html, body {
 .content {
     padding-left: 1%;
     padding-right: 2%;
-    width: 85vw; /* Make the content 50% of the viewport width */
+    flex: 1;
+    min-width: 0; /* IMPORTANT: prevents overflow eating nav */
     align-items:start;
     display: flex; /* Enable flexbox for centering */
     flex-direction: column; /* Stack items vertically */
@@ -106,7 +107,8 @@ html, body {
 }
 
 .content img{
-    width: 70vw;
+    width: 100%;
+    max-width: 70rem; /* optional */
     height: auto;
     display: block;
     padding-bottom: 1%;
@@ -118,7 +120,7 @@ html, body {
     text-align: left; /* Center align the paragraph text */
     margin-bottom: 2%;
     font-size: 0.9rem;
-    width: 70vw;
+    width: 100%;
     word-wrap: break-word;
 }
 
