--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 .content {
-    padding-inline: 0;
+    padding-left: 1.5rem;
     flex: 1;
     min-width: 0; /* IMPORTANT: prevents overflow eating nav */
     width: 100%;
